--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "1.6.4",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-dev-client": "~4.0.27",
     "expo-font": "~12.0.9",
+    "expo-image": "~1.13.0",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
@@ -27,6 +31,8 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
